--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <title></title>
 </head>
 <body key-capture>
-  <div id="arethusa-main-view" ng-view></div>
+  <div id="arethusa-main-view"  class="fade" ng-view></div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
